--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,13 @@
     <string name="or_use">or use your email adress</string>
     <string name="connect_facebook">Connect with\n Facebook</string>
     <string name="connect_twitter">Connect with\n Twitter</string>
+    <string name="navigate_home">Home</string>
+    <string name="navigate_calendar">Calendar</string>
+    <string name="navigate_groups">Groups</string>
+    <string name="navigate_overview">Overview</string>
+    <string name="navigate_lists">Lists</string>
+    <string name="navigate_profile">Profile</string>
+    <string name="navigate_timeline">Timeline</string>
+    <string name="navigate_settings">Settings</string>
+    <string name="navigate_logout">LOGOUT</string>
 </resources>
