--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="navigate_timeline">Timeline</string>
     <string name="navigate_settings">Settings</string>
     <string name="navigate_logout">LOGOUT</string>
+    <string name="timeline_timeline">TIMELINE</string>
 </resources>
